--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -2,89 +2,28 @@
 <html>
 <body>
 
-<div>
-torso angle -180 <input id="slider0" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-head2 angle -180 <input id="slider10" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-
-<div>
-head1 angle -180 <input id="slider1" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-
-<div id="slider2">
-left upper arm angle -180 <input id="slider2" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-left lower arm angle -180 <input id="slider3" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-right upper arm angle -180 <input id="slider4" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-right lower arm angle -180 <input id="slider5" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-left upper leg angle -180 <input id="slider6" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-left lower leg angle -180 <input id="slider7" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-<div>
-right upper leg angle -180 <input id="slider8" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-
-<div>
-right lower leg angle -180 <input id="slider9" type="range"
- min="-180" max="180" step="10" value="0"
-  />
- 180
-</div><br/>
-
 <canvas id="gl-canvas" width="512"" height="512"> </canvas>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 #version 300 es
 
 in vec4 aPosition;
+in vec4 aNormal;
+uniform mat4 objectMatrix;
 
 uniform mat4 modelViewMatrix;
 uniform mat4 projectionMatrix;
 
+out vec4 vNormal;
+out vec4 vColor;
+
+
 void main()
 {
-    gl_Position = projectionMatrix * modelViewMatrix * aPosition;
+    gl_Position = projectionMatrix * modelViewMatrix * objectMatrix *aPosition;
+    vNormal =  aNormal;
+    vec4 color = aPosition;
+    vColor = color;
 }
 </script>
 
@@ -92,18 +31,25 @@ void main()
 #version 300 es
 
 precision mediump float;
-
+in vec4 vNormal;
+in vec4 vColor;
+uniform vec4 aColor;
 out vec4 fColor;
 
 void main()
 {
-    fColor = vec4(1.0, 0.0, 0.0, 1.0);
-
+    //fColor = aColor*dot(vNormal,normalize(vec4(1,1,1,1)));
+    fColor = (vNormal+1.f)/2.f;
 }
 </script>
 
 <script src="../Common/InitShaders.js"></script>
 <script src="../Common/MVnew.js"></script>
+<script src="Entity.js"></script>
+<script src="Material.js"></script>
+<script src="Texture.js"></script>
+<script src="Cube.js"></script>
+<script src="Camera.js"></script>
 <script src="homework2.js"></script>
 
 </body>
