added scale function to mesh, need to fix y coordinate inversion

--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -35,7 +35,7 @@ out vec4 fColor;
 
 void main()
 {
-    fColor = aColor * dot((vNormal.xyz),normalize(vec3(-1,-1,-1))) * 0.5f;
+    fColor = aColor;
 }
 </script>
 
