Added grass plane and bugged camera controls

--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -48,7 +48,9 @@ void main()
 <script src="Entity.js"></script>
 <script src="Material.js"></script>
 <script src="Texture.js"></script>
+<script src="mesh.js"></script>
 <script src="Cube.js"></script>
+<script src="Plane.js"></script>
 <script src="Camera.js"></script>
 <script src="homework2.js"></script>
 
