--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -9,20 +9,20 @@
 
 in vec4 aPosition;
 in vec4 aNormal;
+in vec2 aTexCoord;
 uniform mat4 objectMatrix;
 
 uniform mat4 modelViewMatrix;
 uniform mat4 projectionMatrix;
 
 out vec4 vNormal;
-out vec4 vColor;
-
-
+out vec2 vTexCoord;
 void main()
 {
     gl_Position = projectionMatrix * modelViewMatrix * objectMatrix *aPosition;
-    mat4 rotationMatrix = mat4(mat3(objectMatrix));
     vNormal = objectMatrix * aNormal;
+    vTexCoord = aTexCoord;
+
 }
 </script>
 
@@ -31,15 +31,21 @@ void main()
 
 precision mediump float;
 in vec4 vNormal;
+in vec2 vTexCoord;
+
 uniform vec4 aColor;
+uniform sampler2D aTexture;
+uniform sampler2D bumpmap;
+
 out vec4 fColor;
 
 void main()
 {
-    vec4 ambient = aColor * 0.7f;
-    vec4 light = aColor * -dot(normalize(-(vNormal)),normalize(vec4(-1,-1,-1,1)));
-    fColor = ambient + light;
-    //fColor = (vNormal+1.f)/2.f;
+    vec3 ambient = aColor.rbg * 0.7f;
+    vec4 light = aColor + -dot(normalize(-(vNormal)),normalize(vec4(-1,-1,-1,1)));
+    vec4 textureColor = texture(aTexture,vTexCoord);
+    fColor = textureColor;
+    fColor = vec4(vTexCoord.xy,1,1);
 }
 </script>
 
