--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -14,13 +14,14 @@ uniform mat4 objectMatrix;
 
 uniform mat4 modelViewMatrix;
 uniform mat4 projectionMatrix;
+uniform mat4 inverseObjectMatrix;
 
-out vec4 vNormal;
+out vec3 vNormal;
 out vec2 vTexCoord;
 void main()
 {
     gl_Position = projectionMatrix * modelViewMatrix * objectMatrix *aPosition;
-    vNormal = objectMatrix * aNormal;
+    vNormal = (inverseObjectMatrix * aNormal).xyz;
     vTexCoord = aTexCoord;
 
 }
@@ -30,7 +31,7 @@ void main()
 #version 300 es
 
 precision mediump float;
-in vec4 vNormal;
+in vec3 vNormal;
 in vec2 vTexCoord;
 
 uniform vec4 aColor;
@@ -41,11 +42,13 @@ out vec4 fColor;
 
 void main()
 {
-    vec3 ambient = aColor.rbg * 0.7f;
-    vec4 light = aColor + -dot(normalize(-(vNormal)),normalize(vec4(-1,-1,-1,1)));
+    vec3 bump = normalize((texture(bumpmap,vTexCoord).rgb*2.f)-1.f);
+    vec3 lightDir = vec3(-1,-1,-1);
+    float lightIntensity = 0.7f;
+    float intensity = dot(normalize(vNormal+bump),normalize(lightDir)) * lightIntensity;
     vec4 textureColor = texture(aTexture,vTexCoord);
-    fColor = textureColor;
-    fColor = vec4(vTexCoord.xy,1,1);
+    fColor = textureColor+intensity;
+    //fColor = vec4(intensity,intensity,intensity,1);
 }
 </script>
 
