Trying to fix lighting problem

--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -8,7 +8,7 @@
 #version 300 es
 
 in vec4 aPosition;
-in vec4 aNormal;
+in vec3 aNormal;
 in vec2 aTexCoord;
 in vec3 aTangent;
 uniform mat4 objectMatrix;
@@ -23,14 +23,12 @@ out mat3 tangentSpace;
 void main()
 {
     gl_Position = projectionMatrix * modelViewMatrix * objectMatrix *aPosition;
-    vNormal = (inverseObjectMatrix * aNormal).xyz;
     vTexCoord = aTexCoord;
 
-    vec3 T = normalize(vec3(objectMatrix*vec4(aTangent,0.f)));
-    vec3 N = normalize(vec3(objectMatrix*vec4(aNormal.xyz,0.f)));
-    vec3 bitangent = cross(aNormal.xyz,aTangent);
-    vec3 B = normalize(vec3(objectMatrix*vec4(bitangent,0.f)));
-    mat3 TBN = (mat3(T,B,N));
+    vec3 T = normalize(vec3(inverseObjectMatrix*vec4(aTangent.xyz,0.f)));
+    vec3 N = normalize(vec3(inverseObjectMatrix*vec4(aNormal,0.f)));
+    vec3 B = cross(N,T);
+    mat3 TBN = inverse(mat3(T,B,N));
     tangentSpace = TBN;
 }
 </script>
@@ -52,15 +50,15 @@ out vec4 fColor;
 void main()
 {
     vec3 normal = texture(bumpmap,vTexCoord).rgb;
-    //fColor = vec4(normal.xyz,1);
     normal = normal*2.f-1.f;
     normal = normalize(tangentSpace*normal);
-    vec3 lightDir = normalize(vec3(-1,-1,-1));
+    fColor = vec4(normal,1);
+    vec3 lightDir = normalize(-vec3(-0,-1,0));
     float light = dot(normal,lightDir);
     vec4 textureColor = texture(aTexture,vTexCoord);
-    fColor = textureColor*light;
+    fColor = vec4((textureColor.rgb*light),1);
     //fColor = vec4(light,light,light,1);
-    fColor = textureColor;
+    //fColor = textureColor;
 }
 </script>
 
