--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -26,8 +26,8 @@ void main()
     gl_Position = projectionMatrix * modelViewMatrix * objectMatrix *aPosition;
     vTexCoord = aTexCoord;
 
-    vec3 T = normalize(vec3(objectMatrix * vec4(aTangent.xyz,0.f)));
-    N =      normalize(vec3(objectMatrix * vec4(aNormal,     0.f)));
+    vec3 T = normalize(vec3(objectMatrix * vec4(aTangent,0.f)));
+    N =      normalize(vec3(objectMatrix * vec4(aNormal, 0.f)));
     vec3 B = cross(N,T);
     mat3 TBN = (mat3(T,B,N));
     tangentSpace = TBN;
@@ -52,15 +52,13 @@ out vec4 fColor;
 void main()
 {
     vec3 normal = texture(bumpmap,vTexCoord).rgb;
+    fColor = vec4(normal,1);
     normal = normal*2.f-1.f;
     normal = normalize(tangentSpace*normal);
-    fColor = vec4(normal,1);
     vec3 lightDir = normalize(-vec3(-1,-1,-1));
     float light = dot(normal,lightDir);
     vec4 textureColor = texture(aTexture,vTexCoord);
-    fColor = vec4((textureColor.rgb*light),1);
-    //fColor = vec4(light,light,light,1);
-    //fColor = textureColor;
+    //fColor = vec4((textureColor.rgb*light),1);
 }
 </script>
 
