--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -19,7 +19,7 @@ uniform mat4 inverseObjectMatrix;
 
 out vec3 vNormal;
 out vec2 vTexCoord;
-out mat3 tangentSpace;  
+out mat3 TBN;  
 out vec3 N;
 void main()
 {
@@ -29,8 +29,7 @@ void main()
     vec3 T = normalize(vec3(objectMatrix * vec4(aTangent,0.f)));
     N =      normalize(vec3(objectMatrix * vec4(aNormal, 0.f)));
     vec3 B = cross(N,T);
-    mat3 TBN = (mat3(T,B,N));
-    tangentSpace = TBN;
+    TBN = (mat3(T,B,N));
 }
 </script>
 
@@ -40,7 +39,7 @@ void main()
 precision mediump float;
 in vec3 vNormal;
 in vec2 vTexCoord;
-in mat3 tangentSpace;
+in mat3 TBN;
 in vec3 N;
 
 uniform vec4 aColor;
@@ -54,11 +53,11 @@ void main()
     vec3 normal = texture(bumpmap,vTexCoord).rgb;
     fColor = vec4(normal,1);
     normal = normal*2.f-1.f;
-    normal = normalize(tangentSpace*normal);
-    vec3 lightDir = normalize(-vec3(-1,-1,-1));
-    float light = dot(normal,lightDir);
+    normal = normalize(TBN*normal);
+    vec3 lightDir = normalize(-vec3(1,1,1));
+    float light = dot(normal,lightDir)*1.f;
     vec4 textureColor = texture(aTexture,vTexCoord);
-    fColor = vec4((textureColor.rgb),1);
+    fColor = vec4((textureColor.rgb*light),1);
 }
 </script>
 
