rectified kangaroo lighting, added Bezier class

--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -62,6 +62,7 @@ void main()
 
 <script src="../Common/InitShaders.js"></script>
 <script src="../Common/MVnew.js"></script>
+<script src="Bezier.js"></script>
 <script src="Entity.js"></script>
 <script src="Material.js"></script>
 <script src="Texture.js"></script>
