fixed rotaion problem, adding start animation button

--- a/Homework2/homework2.html
+++ b/Homework2/homework2.html
@@ -72,5 +72,8 @@ void main()
 <script src="Camera.js"></script>
 <script src="homework2.js"></script>
 
+<div>
+    <button id="animation">start animation</button>
+</div>
 </body>
 </html>
